add (section) : skelton created

--- a/index.html
+++ b/index.html
@@ -9,22 +9,166 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-  
+
 
 
     <link rel="stylesheet" href="css/style.css">
- 
+
 </head>
 
 <body>
 
     <!-- Navigation Bar -->
-<nav class="navbar navbar-expand-lg fixed-top">
-  <a class="navbar-brand" href="#">AUST CSE </a>
-</nav>
+    <nav class="navbar navbar-expand-lg fixed-top">
+        <a class="navbar-brand" href="#">AUST CSE </a>
+    </nav>
 
+    <!-- Banner section  -->
+    <section class="container-fluid p-0">
+        <img src="img/banner.jpg" class="img-fluid" alt="">
+    </section>
+
+    <!-- Service section  -->
+
+    <div class="service-section">
+        <section class="container mt-5">
+            <div class="row justify-content-center">
+
+                <div class="card mb-3 col-4  service-1 service " style="max-width: 540px;">
+                    <div class="row g-0 ">
+                        <div class="col-md-4">
+                            <img src="img/icon-1.png" class="img-fluid rounded-start" alt="...">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title">E-MAIL MARKETING</h5>
+                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                    Suspendisse eu
+                                    ligula eu leo dignissim</p>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card mb-3 col-4  service-2 service " style="max-width: 540px;">
+                    <div class="row g-0 ">
+                        <div class="col-md-4">
+                            <img src="img/icon-2.png" class="img-fluid rounded-start" alt="...">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title">E-MAIL MARKETING</h5>
+                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                    Suspendisse eu
+                                    ligula eu leo dignissim</p>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="card mb-3 col-4  service-3 service " style="max-width: 540px;">
+                    <div class="row g-0 ">
+                        <div class="col-md-4">
+                            <img src="img/icon-3.png" class="img-fluid rounded-start" alt="...">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title">E-MAIL MARKETING</h5>
+                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                    Suspendisse eu
+                                    ligula eu leo dignissim</p>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+
+            </div>
+        </section>
+
+    </div>
+
+
+    <!-- Featured service section -->
+    <div class="featured-service-section">
+        <h1 class="center-text"> FEATURED SERVICES</h1>
+        <p class="center-text"> Generate looks resonable is therefore always</p>
+
+        <div class="container mt-5">
+            <div class="row">
+                <div class="col-md-3">
+                    <div class="card text-center">
+                        <img src="img/img1.png" class="rounded-circle mx-auto d-block mt-3"
+                            style="width:100px;height:100px;">
+                        <div class="card-body">
+                            <h5 class="card-title">30+ TEMPLATES</h5>
+                            <p class="card-text">The cites of the discoverd the source comes from sections</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="card text-center">
+                        <img src="img/img2.png" class="rounded-circle mx-auto d-block mt-3"
+                            style="width:100px;height:100px;">
+                        <div class="card-body">
+                            <h5 class="card-title">MULTI PURPOSE</h5>
+                            <p class="card-text">The cites of the discoverd the source comes from sections</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="card text-center">
+                        <img src="img/img3.png" class="rounded-circle mx-auto d-block mt-3"
+                            style="width:100px;height:100px;">
+                        <div class="card-body">
+                            <h5 class="card-title">RESPONSIVE USE</h5>
+                            <p class="card-text">The cites of the discoverd the source comes from sections</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="card text-center">
+                        <img src="img/img4.png" class="rounded-circle mx-auto d-block mt-3"
+                            style="width:100px;height:100px;">
+                        <div class="card-body">
+                            <h5 class="card-title">TONS OF FEATEURES</h5>
+                            <p class="card-text">The cites of the discoverd the source comes from sections</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+    <!-- contact section -->
+
+    <div>
+        <div class="jumbotron jumbotron-fluid"
+            style="background-image:url('image.jpg'); background-size:cover; color:white;">
+            <div class="container">
+                <h1 class="display-4">Text on top of background image</h1>
+                <p class="lead">Some additional text goes here</p>
+                <a href="#" class="btn btn-primary btn-lg">Button</a>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="copyright-container">
+        <div class="row">
+            <div class="col">
+                @ 2018 AUST CSE 3.1 , ALL RIGHTS RESERVED
+            </div>
+        </div>
+    </div>
 
 
 
