copyright section done

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Title</title>
+    <title>ASSIGNMENT 2</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -20,10 +20,14 @@
 
 <body>
 
+
     <!-- Navigation Bar -->
-    <nav class="navbar navbar-expand-lg fixed-top">
-        <a class="navbar-brand" href="#">AUST CSE </a>
+    <nav class="navbar bg-dark fixed-top">
+        <div class="container-fluid">
+            <span class="navbar-brand mb-0 h1">AUST CSE</span>
+        </div>
     </nav>
+
 
     <!-- Banner section  -->
     <section class="container-fluid p-0">
@@ -103,8 +107,8 @@
 
         <div class="container mt-5">
             <div class="row">
-                <div class="col-md-3">
-                    <div class="card text-center">
+                <div class="col-md-3 ">
+                    <div class="card text-center featured-card">
                         <img src="img/img1.png" class="rounded-circle mx-auto d-block mt-3"
                             style="width:100px;height:100px;">
                         <div class="card-body">
@@ -114,7 +118,7 @@
                     </div>
                 </div>
                 <div class="col-md-3">
-                    <div class="card text-center">
+                    <div class="card text-center featured-card">
                         <img src="img/img2.png" class="rounded-circle mx-auto d-block mt-3"
                             style="width:100px;height:100px;">
                         <div class="card-body">
@@ -124,7 +128,7 @@
                     </div>
                 </div>
                 <div class="col-md-3">
-                    <div class="card text-center">
+                    <div class="card text-center featured-card">
                         <img src="img/img3.png" class="rounded-circle mx-auto d-block mt-3"
                             style="width:100px;height:100px;">
                         <div class="card-body">
@@ -134,7 +138,7 @@
                     </div>
                 </div>
                 <div class="col-md-3">
-                    <div class="card text-center">
+                    <div class="card text-center featured-card">
                         <img src="img/img4.png" class="rounded-circle mx-auto d-block mt-3"
                             style="width:100px;height:100px;">
                         <div class="card-body">
@@ -151,23 +155,23 @@
     <!-- contact section -->
 
     <div>
-        <div class="jumbotron jumbotron-fluid"
-            style="background-image:url('image.jpg'); background-size:cover; color:white;">
+        <div class="jumbotron jumbotron-fluid">
             <div class="container">
-                <h1 class="display-4">Text on top of background image</h1>
-                <p class="lead">Some additional text goes here</p>
-                <a href="#" class="btn btn-primary btn-lg">Button</a>
+                <p class="lead">FIND OUT HOW</p>
+                <h1 class="display-4">AUST CSE CAN HELP YOU </h1>
+              
+                <a href="#" class="btn btn-primary btn-lg">GET IN TOUCH ></a>
             </div>
         </div>
     </div>
 
 
     <div class="copyright-container">
-        <div class="row">
+
             <div class="col">
                 @ 2018 AUST CSE 3.1 , ALL RIGHTS RESERVED
             </div>
-        </div>
+    
     </div>
 
 
