Get in touch section

--- a/index.html
+++ b/index.html
@@ -157,9 +157,10 @@
     <div>
         <div class="jumbotron jumbotron-fluid">
             <div class="container">
-                <p class="lead">FIND OUT HOW</p>
-                <h1 class="display-4">AUST CSE CAN HELP YOU </h1>
+                <h2 class="lead touch-header">FIND OUT HOW</h2>
+                <h1 class="display-4 touch-body">AUST CSE CAN HELP YOU </h1>
               
+
                 <a href="#" class="btn btn-primary btn-lg">GET IN TOUCH ></a>
             </div>
         </div>
@@ -168,13 +169,11 @@
 
     <div class="copyright-container">
 
-            <div class="col">
-                @ 2018 AUST CSE 3.1 , ALL RIGHTS RESERVED
-            </div>
-    
+        <div class="col">
+            @ 2018 AUST CSE 3.1 , ALL RIGHTS RESERVED
+        </div>
+
     </div>
-
-
 
 
 
