Featured service section

--- a/index.html
+++ b/index.html
@@ -109,8 +109,7 @@
             <div class="row">
                 <div class="col-md-3 ">
                     <div class="card text-center featured-card">
-                        <img src="img/img1.png" class="rounded-circle mx-auto d-block mt-3"
-                            style="width:100px;height:100px;">
+                        <img src="img/img1.png" class="rounded-circle mx-auto d-block mt-3">
                         <div class="card-body">
                             <h5 class="card-title">30+ TEMPLATES</h5>
                             <p class="card-text">The cites of the discoverd the source comes from sections</p>
@@ -119,8 +118,7 @@
                 </div>
                 <div class="col-md-3">
                     <div class="card text-center featured-card">
-                        <img src="img/img2.png" class="rounded-circle mx-auto d-block mt-3"
-                            style="width:100px;height:100px;">
+                        <img src="img/img2.png" class="rounded-circle mx-auto d-block mt-3">
                         <div class="card-body">
                             <h5 class="card-title">MULTI PURPOSE</h5>
                             <p class="card-text">The cites of the discoverd the source comes from sections</p>
@@ -129,8 +127,7 @@
                 </div>
                 <div class="col-md-3">
                     <div class="card text-center featured-card">
-                        <img src="img/img3.png" class="rounded-circle mx-auto d-block mt-3"
-                            style="width:100px;height:100px;">
+                        <img src="img/img3.png" class="rounded-circle mx-auto d-block mt-3">
                         <div class="card-body">
                             <h5 class="card-title">RESPONSIVE USE</h5>
                             <p class="card-text">The cites of the discoverd the source comes from sections</p>
@@ -139,8 +136,7 @@
                 </div>
                 <div class="col-md-3">
                     <div class="card text-center featured-card">
-                        <img src="img/img4.png" class="rounded-circle mx-auto d-block mt-3"
-                            style="width:100px;height:100px;">
+                        <img src="img/img4.png" class="rounded-circle mx-auto d-block mt-3">
                         <div class="card-body">
                             <h5 class="card-title">TONS OF FEATEURES</h5>
                             <p class="card-text">The cites of the discoverd the source comes from sections</p>
@@ -159,7 +155,7 @@
             <div class="container">
                 <h2 class="lead touch-header">FIND OUT HOW</h2>
                 <h1 class="display-4 touch-body">AUST CSE CAN HELP YOU </h1>
-              
+
 
                 <a href="#" class="btn btn-primary btn-lg">GET IN TOUCH ></a>
             </div>
