service section done with errors

--- a/index.html
+++ b/index.html
@@ -36,28 +36,25 @@
 
     <!-- Service section  -->
 
-    <div class="service-section">
-        <section class="container mt-5">
-            <div class="row justify-content-center">
-
-                <div class="card mb-3 col-4  service-1 service " style="max-width: 540px;">
+    <div class="container text-center service-section">
+        <div class="row justify-content-center">
+            <div class="col col-width-controller">
+                <div class="card mb-3 col-4  service-1 service ">
                     <div class="row g-0 ">
-                        <div class="col-md-4">
-                            <img src="img/icon-1.png" class="img-fluid rounded-start" alt="...">
+                        <div class="col-md-4 ">
+                            <img src="img/icon-1.png" class="img-fluid rounded-start center-img" alt="...">
                         </div>
                         <div class="col-md-8">
                             <div class="card-body">
                                 <h5 class="card-title">E-MAIL MARKETING</h5>
-                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                                    Suspendisse eu
-                                    ligula eu leo dignissim</p>
-
+                                <p class="card-text">Lorem ipsum their default model and search for many websites</p>
                             </div>
                         </div>
                     </div>
                 </div>
-
-                <div class="card mb-3 col-4  service-2 service " style="max-width: 540px;">
+            </div>
+            <div class="col">
+                <div class="card mb-3 col-4  service-2 service ">
                     <div class="row g-0 ">
                         <div class="col-md-4">
                             <img src="img/icon-2.png" class="img-fluid rounded-start" alt="...">
@@ -65,17 +62,15 @@
                         <div class="col-md-8">
                             <div class="card-body">
                                 <h5 class="card-title">E-MAIL MARKETING</h5>
-                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                                    Suspendisse eu
-                                    ligula eu leo dignissim</p>
+                                <p class="card-text">Lorem ipsum their default model and search for many websites</p>
 
                             </div>
                         </div>
                     </div>
                 </div>
-
-
-                <div class="card mb-3 col-4  service-3 service " style="max-width: 540px;">
+            </div>
+            <div class="col">
+                <div class="card mb-3 col-4  service-3 service ">
                     <div class="row g-0 ">
                         <div class="col-md-4">
                             <img src="img/icon-3.png" class="img-fluid rounded-start" alt="...">
@@ -83,21 +78,17 @@
                         <div class="col-md-8">
                             <div class="card-body">
                                 <h5 class="card-title">E-MAIL MARKETING</h5>
-                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                                    Suspendisse eu
-                                    ligula eu leo dignissim</p>
+                                <p class="card-text">Lorem ipsum their default model and search for many websites</p>
 
                             </div>
                         </div>
                     </div>
                 </div>
-
-
-
             </div>
-        </section>
-
+        </div>
     </div>
+
+
 
 
     <!-- Featured service section -->
